# pcsAPEX-Demo

./: README.md  main.py  pyproject.toml
pcsAPEX/: Dockerfile  check_gpu.py  db.sqlite3  docker-compose.yml  manage.py  podman-compose.yml  requirements.txt  run_gpu_check.py  shell.nix
pcsAPEX/__docs [Ignore]/developer/: architecture.md
pcsAPEX/__docs [Ignore]/user/: getting_started.md
pcsAPEX/docs/: README.md
pcsAPEX/image_classifier/: admin.py  check_gpu_availability.py  forms.py  ml_utils.py  models.py  schemas.py  services.py  tf_config.py  urls.py  views.py
pcsAPEX/image_classifier/migrations/: 0001_initial.py  0002_systemconfig.py  0002_trainingjob_gpu_used.py  0003_trainingjob_gpu_used.py  0004_merge_20250428_1518.py
pcsAPEX/image_classifier/templates/image_classifier/: base.html  category_form.html  category_list.html  confirm_image_label.html  edit_image_label.html  image_detail.html  image_list.html  index.html  label_image.html  system_config.html  training_job_detail.html  training_job_form.html  training_job_list.html  upload_image.html
pcsAPEX/media/models/: encoder_6.pkl
pcsAPEX/pcsAPEX/: asgi.py  settings.py  urls.py  wsgi.py
