[project]
name = "demo-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "django",
    "seaborn",
    "opencv-python-headless",
    "pytest",
    "pillow>=11.2.1",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.4.0",
    "numpy>=2.0.0",
]
